@@ -23,10 +23,7 @@ import com.navercorp.pinpoint.test.plugin.PluginTestContext;
 import com.navercorp.pinpoint.test.plugin.ProcessManager;
 import com.navercorp.pinpoint.test.plugin.util.CollectionUtils;
 import com.navercorp.pinpoint.test.plugin.util.CommandLineOption;
-import com.navercorp.pinpoint.test.plugin.util.JDKUtils;
-import com.navercorp.pinpoint.test.plugin.util.StringJoiner;
 import com.navercorp.pinpoint.test.plugin.util.StringUtils;
-import com.navercorp.pinpoint.test.plugin.util.TLSOption;
 import com.navercorp.pinpoint.test.plugin.util.TestLogger;
 import org.eclipse.aether.artifact.Artifact;
 import org.tinylog.TaggedLogger;
@@ -39,6 +36,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.StringJoiner;
 import java.util.Timer;
 import java.util.TimerTask;
 
@@ -58,7 +56,6 @@ public class SharedProcessManager implements ProcessManager {
 
     public SharedProcessManager(PluginTestContext context) {
         this.context = Objects.requireNonNull(context, "context");
-        TLSOption.applyTLSv12();
     }
 
     @Override
@@ -152,12 +149,6 @@ public class SharedProcessManager implements ProcessManager {
 
         option.addOption("-Xmx1024m");
         final List<String> jvmArguments = context.getJvmArguments();
-        if (!JDKUtils.isJdk8Plus()) {
-            // -XX:MaxPermSize for jdk 7
-            if (!hasMaxPermSize(jvmArguments)) {
-                option.addOption("-XX:MaxPermSize=512m");
-            }
-        }
 
         option.addOptions(jvmArguments);
 
